--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             <li><a href="./trabalho4/">trab04</a></li>
             <li><a href="./trabalho5/">trab05</a></li>
             <li><a href="./trabalho6/">trab06</a></li>
+            <li><a href="./trabalho7/">trab07</a></li>
         </ul>
 
     </nav>
