update index trab8 e ids

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
         <div class="container"><a class="navbar-brand" href="#">PPI</a><button data-bs-toggle="collapse" class="navbar-toggler navbar-toggler-right" data-bs-target="#navbarResponsive" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" value="Menu"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
+                    <li class="nav-item nav-link"><a class="nav-link active" href="#">início</a></li>
                     <li class="nav-item nav-link"><a class="nav-link active" href="#trabalhos">trabalhos</a></li>
-                    <li class="nav-item nav-link"><a class="nav-link" href="#download">sobre</a></li>
-                    <li class="nav-item nav-link"><a class="nav-link" href="#contact">contato</a></li>
+                    <li class="nav-item nav-link"><a class="nav-link" href="#sobre">sobre</a></li>
+                    <li class="nav-item nav-link"><a class="nav-link" href="#contato">contato</a></li>
                 </ul>
             </div>
         </div>
@@ -40,7 +41,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <h2>Trabalhos</h2>
+                    <h2>Trabalhos Semanais</h2>
                     <ul class="list-inline banner-social-buttons">
                         <li class="list-inline-item list-inline-item"><a class="btn btn-primary btn-lg btn-default" role="button" href="./trabalho1/">&nbsp;<i class="fa-solid fa-1"></i><span class="network-name">&nbsp;</span></a></li>
                         <li class="list-inline-item list-inline-item"><a class="btn btn-primary btn-lg btn-default" role="button" href="./trabalho2/">&nbsp;<i class="fa-solid fa-2"></i><span class="network-name">&nbsp;</span></a></li>
@@ -48,21 +49,22 @@
                         <li class="list-inline-item list-inline-item"><a class="btn btn-primary btn-lg btn-default" role="button" href="./trabalho4/">&nbsp;<i class="fa-solid fa-4"></i><span class="network-name">&nbsp;</span></a></li>
                         <li class="list-inline-item list-inline-item"><a class="btn btn-primary btn-lg btn-default" role="button" href="./trabalho5/">&nbsp;<i class="fa-solid fa-5"></i><span class="network-name">&nbsp;</span></a></li>                        
                         <li class="list-inline-item list-inline-item"><a class="btn btn-primary btn-lg btn-default" role="button" href="./trabalho6/">&nbsp;<i class="fa-solid fa-6"></i><span class="network-name">&nbsp;</span></a></li>
-                        <li class="list-inline-item list-inline-item"><a class="btn btn-primary btn-lg btn-default" role="button" href="./trabalho7/">&nbsp;<i class="fa-solid fa-7"></i><span class="network-name">&nbsp;</span></a></li>                    
+                        <li class="list-inline-item list-inline-item"><a class="btn btn-primary btn-lg btn-default" role="button" href="./trabalho7/">&nbsp;<i class="fa-solid fa-7"></i><span class="network-name">&nbsp;</span></a></li>
+                        <li class="list-inline-item list-inline-item"><a class="btn btn-primary btn-lg btn-default" role="button" href="./trabalho8/">&nbsp;<i class="fa-solid fa-8"></i><span class="network-name">&nbsp;</span></a></li>                    
                     </ul>
                 </div>
             </div>
         </div>
     </section>
-    <section class="text-center download-section content-section" id="download" style="background-image: url('assets/img/downloads-bg.jpg');">
+    <section class="text-center download-section content-section" id="sobre" style="background-image: url('assets/img/sobre-bg.jpg');">
         <div class="container">
             <div class="col-lg-8 mx-auto">
                 <h2>Sobre</h2>
-                <p>Esse site é uma adaptação do &nbsp;<a href="https://startbootstrap.com/previews/grayscale">Grayscale</a>, um template de código aberto gratuito do Bootstrap</p>
+                <p>Esse site é uma adaptação do <a href="https://startbootstrap.com/previews/grayscale">Grayscale</a>, um template de código aberto gratuito do Bootstrap.</p>
             </div>
         </div>
     </section>
-    <section class="text-center content-section" id="contact">
+    <section class="text-center content-section" id="contato">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
@@ -77,9 +79,12 @@
             </div>
         </div>
     </section>
+    <hr>
     <!-- <div class="map-clean"><iframe allowfullscreen="" frameborder="0" src="https://cdn.bootstrapstudio.io/placeholders/map.html" width="100%" height="450"></iframe></div> -->
     <footer>
+
         <div class="container text-center">
+            <p>Igor Augusto</p>
             <p>Copyright ©&nbsp;PPI 2023</p>
         </div>
     </footer>
