--- a/trabalho4/index.html
+++ b/trabalho4/index.html
@@ -3,14 +3,55 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Trabalho 4</title>
+    
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        nav {
+            background-color: #333;
+            color: #fff;
+            padding: 1em;
+            text-align: center;
+        }
+
+        nav ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: inline-block;
+        }
+
+        nav li {
+            display: inline-block;
+        }
+
+        nav a {
+            color: #fff;
+            margin: 0 1em;
+            text-decoration: none;
+            text-transform: uppercase;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 
 <body>
-    <ul>
-        <li><a href="./ex1">Ex01</a></li>
-        <li><a href="./ex2">Ex02</a></li>
-        <li><a href="./ex3">Ex03</a></li>
-    </ul>
+    <nav>
+        <ul>
+            <li><a href="./ex1">Ex01</a></li>
+            <li><a href="./ex2">Ex02</a></li>
+            <li><a href="./ex3">Ex03</a></li>
+        </ul>
+    </nav>
 </body>
 
 </html>
