--- a/trabalho8/ex5/index.html
+++ b/trabalho8/ex5/index.html
@@ -16,7 +16,7 @@
             <div class="col-md-6">
                 <h2 class="text-center mb-5">Menu Principal</h2>
                 <div class="list-group">
-                    <a href="../ex4/cadastroCliente.php" class="list-group-item list-group-item-action">Cadastrar novo
+                    <a href="../ex4/index.html" class="list-group-item list-group-item-action">Cadastrar novo
                         cliente</a>
                     <a href="../ex4/listaClientes.php" class="list-group-item list-group-item-action">Listar clientes
                         cadastrados</a>
