--- a/trabalho3/index.html
+++ b/trabalho3/index.html
@@ -1,56 +1,41 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trabalho 3</title>
-    
+    <title>Menu Principal</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
+            background-color: #f8f9fa;
         }
 
-        nav {
-            background-color: #333;
+        .container {
+            max-width: 600px;
+        }
+
+        .list-group-item:hover {
+            background-color: #6c757d;
             color: #fff;
-            padding: 1em;
-            text-align: center;
-        }
-
-        nav ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            display: inline-block;
-        }
-
-        nav li {
-            display: inline-block;
-        }
-
-        nav a {
-            color: #fff;
-            margin: 0 1em;
-            text-decoration: none;
-            text-transform: uppercase;
-        }
-
-        nav a:hover {
-            text-decoration: underline;
         }
     </style>
 </head>
 
 <body>
-    <nav>
-        <ul>
-            <li><a href="./ex1">Ex01</a></li>
-            <li><a href="./ex2">Ex02</a></li>
-        </ul>
-    </nav>
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <h2 class="text-center mb-5">Trabalho 3</h2>
+                <div class="list-group">
+                    <a href="./ex1" class="list-group-item list-group-item-action">Exercício 1</a>
+                    <a href="./ex2" class="list-group-item list-group-item-action">Exercício 2</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
