--- a/trabalho8/ex5/index.html
+++ b/trabalho8/ex5/index.html
@@ -8,6 +8,20 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <style>
+        body {
+            background-color: #f8f9fa;
+        }
+
+        .container {
+            max-width: 600px;
+        }
+
+        .list-group-item:hover {
+            background-color: #6c757d;
+            color: #fff;
+        }
+    </style>
 </head>
 
 <body>
