--- a/trabalho10/ex3/index.html
+++ b/trabalho10/ex3/index.html
@@ -88,7 +88,7 @@
 
   <script>
 
-    function sendiForm(form) {
+    function sendForm(form) {
       // localiza o formulário e cria objeto FormData
       // let myForm = document.querySelector("form");
       let formData = new FormData(form);
