--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                         <li class="list-inline-item list-inline-item"><a class="btn btn-primary btn-lg btn-default" role="button" href="./trabalho6/">&nbsp;<i class="fa-solid fa-6"></i><span class="network-name">&nbsp;</span></a></li>
                         <li class="list-inline-item list-inline-item"><a class="btn btn-primary btn-lg btn-default" role="button" href="./trabalho7/">&nbsp;<i class="fa-solid fa-7"></i><span class="network-name">&nbsp;</span></a></li>
                         <li class="list-inline-item list-inline-item"><a class="btn btn-primary btn-lg btn-default" role="button" href="./trabalho8/">&nbsp;<i class="fa-solid fa-8"></i><span class="network-name">&nbsp;</span></a></li>
-                        <li class="list-inline-item list-inline-item"><a class="btn btn-primary btn-lg btn-default" role="button" href="./trabalho9/">&nbsp;<i class="fa-solid fa-9"></i><span class="network-name">&nbsp;</span></a></li>                    
+                        <li class="list-inline-item list-inline-item"><a class="btn btn-primary btn-lg btn-default" role="button" href="./trabalho9/">&nbsp;<i class="fa-solid fa-9"></i><span class="network-name">&nbsp;</span></a></li>
+                        <li class="list-inline-item list-inline-item"><a class="btn btn-primary btn-lg btn-default" role="button" href="./trabalho10/"><i class="fa-solid fa-1"></i><i class="fa-solid fa-0"></i><span class="network-name"></span></a></li>                    
                     </ul>
                 </div>
             </div>
