--- a/trabalho10/ex1/index.html
+++ b/trabalho10/ex1/index.html
@@ -34,7 +34,7 @@
             <div class="col-md-6">
                 <h2 class="text-center mb-4">Exercício 1</h2>
                 <div class="list-group">
-                    <a href="./Ex1-cep-fetch/" class="list-group-item list-group-item-action">Ex1-cep-fetch</a>
+                    <a href="./Ex1-cep-fetch" class="list-group-item list-group-item-action">Ex1-cep-fetch</a>
                 </div>
             </div>
         </div>
