--- a/trabalho10/ex4/index.html
+++ b/trabalho10/ex4/index.html
@@ -7,10 +7,46 @@
     <title>Cotação de Ações</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
+    <style>
+        body {
+            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+            line-height: 1.5rem;
+            background-color: #ddd;
+            color: #555;
+            margin: 0;
+        }
+
+        main {
+            width: 60%;
+            margin: 0;
+            padding: 2% 4%;
+            background-color: #eee;
+
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        h1 {
+            font-size: 5rem;
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
-    <div class="container">
+
+    <main>
+        <h2>Cotações das ações Indicadas</h2>
+        <hr>
+        <p>...</p>
+        <p>...</p>
+        <p>...</p>
+        <p>...</p>
+    </main>
+    <!-- <div class="container">
         <h1 class="row mt-5 mx-1">Cotar ações</h1>
         <form id="acaoForm" class="mt-4 col-md-4">
             <div class="form-group">
@@ -34,7 +70,7 @@
                 Paralelo</button>
         </form>
         <div id="cotas" class="mt-5"></div>
-    </div>
+    </div> -->
 
     <script>
         function getQuotes(acao) {
