method attribute missing from form

--- a/trabalho10/ex3/index.html
+++ b/trabalho10/ex3/index.html
@@ -67,7 +67,7 @@
   <div class="container">
     <main>
       <h3>Efetue login</h3>
-      <form class="row g-3" action="checkLogin.php" id="formLogin">
+      <form class="row g-3" action="checkLogin.php" id="formLogin" method="post">
         <div class="col-sm-12">
           <label for="email" class="form-label">E-mail</label>
           <input type="email" name="email" class="form-control" id="email">
