--- a/trabalho10/ex4/index.html
+++ b/trabalho10/ex4/index.html
@@ -39,38 +39,34 @@
 <body>
 
     <main>
-        <h2>Cotações das ações Indicadas</h2>
-        <hr>
-        <p>...</p>
-        <p>...</p>
-        <p>...</p>
-        <p>...</p>
+        <div class="container">
+            <h2 class="row mt-5 mx-1">Cotações das Ações Indicadas</h2>
+            <hr>
+            <form id="acaoForm" class="mt-4 col-md-4">
+                <div class="form-group">
+                    <input type="text" class="form-control" name="acao1" placeholder="Ação 1">
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control mt-3" name="acao2" placeholder="Ação 2">
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control mt-3" name="acao3" placeholder="Ação 3">
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control mt-3" name="acao4" placeholder="Ação 4">
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control mt-3" name="acao5" placeholder="Ação 5">
+                </div>
+                <button type="button" class="btn btn-outline-dark mt-4" onclick="getQuotesSequentially()">Cotar
+                    Sequencialmente</button>
+                <button type="button" class="btn btn-outline-dark mt-4" onclick="getQuotesInParallel()">Cotar em
+                    Paralelo</button>
+            </form>
+            <div id="cotas" class="mt-5"></div>
+        </div>
     </main>
-    <!-- <div class="container">
-        <h1 class="row mt-5 mx-1">Cotar ações</h1>
-        <form id="acaoForm" class="mt-4 col-md-4">
-            <div class="form-group">
-                <input type="text" class="form-control" name="acao1" placeholder="Ação 1">
-            </div>
-            <div class="form-group">
-                <input type="text" class="form-control mt-3" name="acao2" placeholder="Ação 2">
-            </div>
-            <div class="form-group">
-                <input type="text" class="form-control mt-3" name="acao3" placeholder="Ação 3">
-            </div>
-            <div class="form-group">
-                <input type="text" class="form-control mt-3" name="acao4" placeholder="Ação 4">
-            </div>
-            <div class="form-group">
-                <input type="text" class="form-control mt-3" name="acao5" placeholder="Ação 5">
-            </div>
-            <button type="button" class="btn btn-outline-primary mt-4" onclick="getQuotesSequentially()">Cotar
-                Sequencialmente</button>
-            <button type="button" class="btn btn-outline-success mt-4" onclick="getQuotesInParallel()">Cotar em
-                Paralelo</button>
-        </form>
-        <div id="cotas" class="mt-5"></div>
-    </div> -->
+
 
     <script>
         function getQuotes(acao) {
