--- a/trabalho10/ex4/index.html
+++ b/trabalho10/ex4/index.html
@@ -42,7 +42,7 @@
         <div class="container">
             <h2 class="row mt-5 mx-1">Cotações das Ações Indicadas</h2>
             <hr>
-            <form id="acaoForm" class="mt-4 col-md-4">
+            <form id="acaoForm" class="mt-4 col-sm-4">
                 <div class="form-group">
                     <input type="text" class="form-control" name="acao1" placeholder="Ação 1">
                 </div>
@@ -58,9 +58,9 @@
                 <div class="form-group">
                     <input type="text" class="form-control mt-3" name="acao5" placeholder="Ação 5">
                 </div>
-                <button type="button" class="btn btn-outline-dark mt-4" onclick="getQuotesSequentially()">Cotar
+                <button type="button" class="btn btn-outline-dark mt-4 col-12" onclick="getQuotesSequentially()">Cotar
                     Sequencialmente</button>
-                <button type="button" class="btn btn-outline-dark mt-4" onclick="getQuotesInParallel()">Cotar em
+                <button type="button" class="btn btn-outline-dark mt-3 col-12" onclick="getQuotesInParallel()">Cotar em
                     Paralelo</button>
             </form>
             <div id="cotas" class="mt-5"></div>
