--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                         <li class="list-inline-item list-inline-item"><a class="btn btn-primary btn-lg btn-default" role="button" href="./trabalho08/">&nbsp;<i class="fa-solid fa-8"></i><span class="network-name">&nbsp;</span></a></li>
                         <li class="list-inline-item list-inline-item"><a class="btn btn-primary btn-lg btn-default" role="button" href="./trabalho09/">&nbsp;<i class="fa-solid fa-9"></i><span class="network-name">&nbsp;</span></a></li>
                         <li class="list-inline-item list-inline-item"><a class="btn btn-primary btn-lg btn-default" role="button" href="./trabalho10/"><i class="fa-solid fa-1"></i><i class="fa-solid fa-0"></i><span class="network-name"></span></a></li>                    
+                        <li class="list-inline-item list-inline-item"><a class="btn btn-primary btn-lg btn-default" role="button" href="./trabalho11/"><i class="fa-solid fa-1"></i><i class="fa-solid fa-1"></i><span class="network-name"></span></a></li>                    
                     </ul>
                 </div>
             </div>
